fixed hero image on IE11

--- a/scss/custom/header.scss
+++ b/scss/custom/header.scss
@@ -59,7 +59,7 @@
 @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
   .header-background{
     background-color: transparent;
-    background-image: url("/assets/img/homepage.jpg") !important;
+    background-image: url("/assets/img/homepage.jpg");
   }
 
   .header-background:before {
@@ -67,7 +67,7 @@
     position: absolute;
     height: 100%;
     width: 100%;
-    background: tran­spa­ren­tiz­e($zoetrope-blue, 0.4);
+    background: rgba($zoetrope-blue, 0.4);
   }
 }
 
